--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Blog
+title: High Performance Computing and Databases Group
 ---
 <div class="well">
     <div class="list-group">
